--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         let sortAscending = true;
 
         // Charger le fichier CSV depuis GitHub
-        const csvUrl = "https://raw.githubusercontent.com/ton-nom-utilisateur/mon-inventaire/main/data.csv"; // Remplace par ton URL
+        const csvUrl = "https://github.com/Gestionlabo/gestionlabo/blob/main/data.csv"; // Remplace par ton URL
 
         // Fonction pour charger et afficher les données CSV
         function chargerCSV() {
