--- a/index.html
+++ b/index.html
@@ -85,26 +85,31 @@
             });
         }
 
-        // Trier les colonnes
-        function trierColonne(index, colonne) {
-            if (sortColumn === colonne) {
-                sortAscending = !sortAscending;
-            } else {
-                sortColumn = colonne;
-                sortAscending = true;
-            }
+       // Trier les colonnes
+function trierColonne(index, colonne) {
+    if (sortColumn === colonne) {
+        sortAscending = !sortAscending;
+    } else {
+        sortColumn = colonne;
+        sortAscending = true;
+    }
 
-            filteredData.sort((a, b) => {
-                const valA = a[colonne];
-                const valB = b[colonne];
+    filteredData.sort((a, b) => {
+        const valA = a[colonne];
+        const valB = b[colonne];
 
-                if (valA < valB) return sortAscending ? -1 : 1;
-                if (valA > valB) return sortAscending ? 1 : -1;
-                return 0;
-            });
+        // Convertir en nombre si possible
+        const numA = isNaN(valA) ? valA : parseFloat(valA);
+        const numB = isNaN(valB) ? valB : parseFloat(valB);
 
-            afficherTableau();
-        }
+        if (numA < numB) return sortAscending ? -1 : 1;
+        if (numA > numB) return sortAscending ? 1 : -1;
+        return 0;
+    });
+
+    afficherTableau();
+}
+
 
         // Fonction de recherche
         document.getElementById("searchInput").addEventListener("input", function(event) {
