--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <h1>Inventaire</h1>
     <p>Vous pouvez cliquer sur l'entête des colonnes pour trier les données.</p>
     
+    <div id="stockVersion">Stock au 12/03/2025</div>
+    
     <input type="text" id="searchInput" placeholder="Rechercher...">
 
     <table id="csvTable">
