--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <body>
 
     <h1>Inventaire</h1>
+     <p>Stock au 12/03/2025</p>
     <p>Vous pouvez cliquer sur l'entête des colonnes pour trier les données.</p>
-    
-    <div id="stockVersion">Stock au 12/03/2025</div>
     
     <input type="text" id="searchInput" placeholder="Rechercher...">
 
