--- a/index.html
+++ b/index.html
@@ -144,28 +144,31 @@
             });
         }
 
-        function trierColonne(index, colonne) {
-            if (sortColumn === colonne) {
-                sortAscending = !sortAscending;
-            } else {
-                sortColumn = colonne;
-                sortAscending = true;
-            }
+function trierColonne(index, colonne) {
+    if (index === 6) { // Si c'est la colonne 7 (index 6)
+        // Classer la colonne 7 par ordre croissant
+        filteredData.sort((a, b) => {
+            const numA = parseFloat(a[colonne]) || 0; // Traite les valeurs non numériques comme 0
+            const numB = parseFloat(b[colonne]) || 0;
+            return numA - numB; // Tri croissant
+        });
+    } else {
+        // Sinon, effectuer le tri habituel (par défaut par ordre alphabétique)
+        filteredData.sort((a, b) => {
+            const valA = a[colonne] || "";
+            const valB = b[colonne] || "";
+            const numA = isNaN(valA) ? valA : parseFloat(valA);
+            const numB = isNaN(valB) ? valB : parseFloat(valB);
 
-            filteredData.sort((a, b) => {
-                const valA = a[colonne];
-                const valB = b[colonne];
+            if (numA < numB) return -1;
+            if (numA > numB) return 1;
+            return 0;
+        });
+    }
 
-                const numA = isNaN(valA) ? valA : parseFloat(valA);
-                const numB = isNaN(valB) ? valB : parseFloat(valB);
+    afficherTableau();
+}
 
-                if (numA < numB) return sortAscending ? -1 : 1;
-                if (numA > numB) return sortAscending ? 1 : -1;
-                return 0;
-            });
-
-            afficherTableau();
-        }
 
         document.getElementById("searchInput").addEventListener("input", function(event) {
             const searchTerm = event.target.value.toLowerCase();
