--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     break;
                                 default:
                                     img.src = "";
-                                    img.alt = "Pictogramme inconnu";
+                                    img.alt = "inconnu";
                             }
 
                             if (img.src) { 
