--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                                 case "SGH07":
                                     img.src = "https://upload.wikimedia.org/wikipedia/commons/c/c3/GHS-pictogram-exclam.svg";
                                     img.alt = "Pictogramme SGH07";
+                                    break;    
+                                case "SGH04":
+                                    img.src = "https://upload.wikimedia.org/wikipedia/commons/6/6a/GHS-pictogram-bottle.svg";
+                                    img.alt = "Pictogramme SGH04";
                                     break;
                                 case "SGH01":
                                     img.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/GHS-pictogram-explos.svg/100px-GHS-pictogram-explos.svg.png";
@@ -122,9 +126,6 @@
                                     img.src = "https://upload.wikimedia.org/wikipedia/commons/b/b9/GHS-pictogram-pollu.svg?uselang=fr";
                                     img.alt = "Pictogramme SGH09";
                                     break;
-                                default:
-                                    img.src = "";
-                                    img.alt = "inconnu";
                             }
 
                             if (img.src) { 
