--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Liste Dynamique CSV</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
+    <meta charset="UTF-8">
+
 </head>
 <body>
     <h1>Inventaire</h1>
