--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Liste Dynamique CSV</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
+        body { font-family: Trebuchet MS, sans-serif; padding: 20px; }
         table { width: 100%; border-collapse: collapse; margin-top: 10px; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: left; cursor: pointer; }
         th { background-color: #f4f4f4; }
